@@ -1,0 +1,9 @@
+Title: Display host/service notification delay with d/h/m/s, not with fractions of minute
+Level: 1
+Component: wato
+Compatible: compat
+Version: 1.4.0i3
+Date: 1479382462
+Class: feature
+
+
