@@ -27,6 +27,7 @@
 
     WATO:
     * 3984 Permissions can now be filtered by providing a search term on the "edit role" page...
+    * 4044 Display host/service notification delay with d/h/m/s, not with fractions of minute
     * 4039 FIX: Fix UnicodeEncodeError exception in WATO folder display...
     * 4041 FIX: Fix exception when editing global configuration settings...
     * 3975 FIX: Improved error handling when trying to edit not existing global setting
